@@ -5,24 +5,24 @@ flavour sparc64
 kernel-2.4 kernel-image-2.4-sparc64
 kernel-2.6 kernel-image-2.6-sparc64
 usable \
-  kernel-image-2.4-sparc32 \
-  kernel-image-2.4-sparc32-smp \
   kernel-image-2.4-sparc64 \
   kernel-image-2.4-sparc64-smp \
-  kernel-image-2.4.26-sparc32 \
-  kernel-image-2.4.26-sparc32-smp \
   kernel-image-2.4.26-sparc64 \
   kernel-image-2.4.26-sparc64-smp \
-  kernel-image-2.4.27-1-sparc32 \
-  kernel-image-2.4.27-1-sparc32-smp \
   kernel-image-2.4.27-1-sparc64 \
   kernel-image-2.4.27-1-sparc64-smp \
-  kernel-image-2.6-sparc32 \
   kernel-image-2.6-sparc64 \
   kernel-image-2.6-sparc64-smp \
-  kernel-image-2.6.8-2-sparc32 \
   kernel-image-2.6.8-2-sparc64 \
   kernel-image-2.6.8-2-sparc64-smp
 unusable \
+  kernel-image-2.4-sparc32 \
+  kernel-image-2.4-sparc32-smp \
+  kernel-image-2.4.26-sparc32 \
+  kernel-image-2.4.26-sparc32-smp \
+  kernel-image-2.4.27-1-sparc32 \
+  kernel-image-2.4.27-1-sparc32-smp \
+  kernel-image-2.6-sparc32 \
   kernel-image-2.6-sparc32-smp \
+  kernel-image-2.6.8-2-sparc32 \
   kernel-image-2.6.8-2-sparc32-smp
