@@ -28,8 +28,10 @@ base-installer (1.17) UNRELEASED; urgency=low
       2.6.8-11 and 2.6.10-3) now depend on mkvmlinuz.
   * Christian Perrier
     - Remove extra space in templates. Closes: #305775
+  * Frans Pop
+    - sparc32 kernels are not usable on sparc64. Closes #297740
 
- -- Sven Luther <luther@debian.org>  Sat, 26 Feb 2005 18:27:07 +0100
+ -- Frans Pop <aragorn@tiscali.nl>  Fri, 22 Apr 2005 13:53:11 +0200
 
 base-installer (1.16) experimental; urgency=low
 
